cabal-version:   3.4
name:            mustang
version:         0.1.0.0
license:         MIT
license-file:    LICENSE
author:          bytemuck
maintainer:      bytemuck@gmail.com
category:        Language
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
  ghc-options: -Wall

library
  import:           warnings
  hs-source-dirs:   src
  exposed-modules:
    Mustang.Parser
    Mustang.Parser.Primitive
    Mustang.Parser.Text

  default-language: GHC2024
  build-depends:    
    , base ^>=4.21.0.0
    , mtl  ^>=2.3.0.0

executable mustang
  import:           warnings
  hs-source-dirs:   app
  main-is:          Main.hs
  other-modules:
    Env
    Lex
    Resolve
    RExp
    SExp
  default-language: GHC2024
  build-depends:
    , base  ^>=4.21.0.0
    , containers ^>= 0.8
    , mustang
    , pretty-simple ^>= 4.1.3.0

test-suite mustang-test
  import:           warnings
  hs-source-dirs:   test
  main-is:          Main.hs
  type:             exitcode-stdio-1.0
  default-language: GHC2024
  build-depends:
    , base   ^>=4.21.0.0
    , hspec  ^>=2.11.0.0
    , mustang